--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,8 +1,11 @@
 /* footer styling */
 footer {
+  grid-row: 3/4;
+  grid-column: 1/1;
   display: grid;
   grid-template-columns: auto 1fr auto;
   padding: 30px 80px 20px;
+  z-index: 2;
 }
 .fab {
   font-size: 24px;
